<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/createReminderFragment">

    <fragment
        android:id="@+id/createReminderFragment"
        android:name="com.remindme.app.ui.create.CreateReminderFragment"
        android:label="@string/nav_create_reminder"
        tools:layout="@layout/fragment_create_reminder" />

    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.remindme.app.ui.calendar.CalendarFragment"
        android:label="@string/nav_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/progressFragment"
        android:name="com.remindme.app.ui.progress.ProgressFragment"
        android:label="@string/nav_progress"
        tools:layout="@layout/fragment_progress" />

</navigation> 